kubernetes/kubernetes_2.3/config/2-3-1-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy
  labels:
    name: deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      name: deploy

  template:
    metadata:
      labels:
        name: deploy
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        volumeMounts:
        - name: busy
          mountPath: "/input"

      - name: busybox
        image: busybox
        command: ['sh', '-c', 'j=0; while true; do echo Container alive $j seconds; j=$((j+5)) && sleep 5;done > /output/busylog.txt']
        volumeMounts:
        - name: busy
          mountPath: "/output"
      volumes:
      - name: busy
        hostPath:
          path: /tmp/busy-test
