kubernetes/kubernetes_2.3/config/2-3-1-nginx_multitool.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-and-multitool
  labels:
    app: nginx-and-multitool
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-and-multitool

  template:
    metadata:
      labels:
        app: nginx-and-multitool
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
         - containerPort: 80
        volumeMounts:
          - name: configmap-volume
            mountPath: /usr/share/nginx/html/
      - name: multitool
        image: wbitt/network-multitool
      volumes:
        - name: configmap-volume
          configMap:
            name: cm-page
