kubernetes/kubernetes_2.3/config/2-3-1-nginx_multitool_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-and-multitool-svc
spec:
  ports:
  - name: nginx
    port: 80
    protocol: TCP
    targetPort: 80
  - name: multitool
    port: 1180
    protocol: TCP
    targetPort: 18080
  selector:
    app: nginx-and-multitool
