kubernetes/kubernetes_2.3/config/2-3-2-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /
  name: ingress-nginx
spec:
  tls:
    - hosts:
        - 10.152.183.107
      secretName: nginx-secret
  rules:
  - host:
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: nginx-svc
            port:
              number: 443
